# ollama-model-fine-tuning

./: .gitignore  README.md  pyproject.toml
code/: Senior Product Manager - Training.ipynb
data/syntetic/datasets/: epics.jsonl  features.jsonl  story_map.jsonl  user_stories.jsonl
docs/: GLOSARY.md  ollama_response.md
docs/diagrams/: fine-tunning-runpod-proc.puml
docs/prompts/epics/: syntetic_data_gen_prompt.txt  syntetic_data_gen_prompt_BluePrint_Engine.txt  syntetic_data_gen_prompt_Elite_DataFlow_Stream.txt  syntetic_data_gen_prompt_Expert_Code_Roadmap.txt  syntetic_data_gen_prompt_Legacy Leap.txt  syntetic_data_gen_prompt_Universal.txt
docs/prompts/features/: syntetic_data_gen_prompt_Epics.txt
