[project]
name = "per-training-model"
version = "0.1.0"
description = ""
authors = [
    {name = "jiliar.silgado@gmail.com"}
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "unsloth (>=2026.2.1,<2027.0.0)",
    "peft (>=0.18.1,<0.19.0)",
    "accelerate (>=1.12.0,<2.0.0)",
    "bitsandbytes (>=0.49.2,<0.50.0)",
    "xformers (>=0.0.34,<0.0.35)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "trl (<=0.24.0)",
    "unsloth-zoo (>=2026.2.1,<2027.0.0)",
    "torchvision (>=0.25.0,<0.26.0)",
    "gguf (>=0.17.1,<0.18.0)",
    "protobuf (>=6.33.5,<7.0.0)",
    "sentencepiece (>=0.2.1,<0.3.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
[tool.poetry.dependencies]
unsloth = {allow-prereleases = true}
unsloth-zoo = {allow-prereleases = true}
